# Jump-Sturdy-AI

./: .gitignore  CMakeLists.txt  README.md  ai.cpp  ai.hpp  alternatives_cmake.txt  asio.hpp  avg.py  board  board.cpp  board.hpp  connect.cpp  connect.hpp  dtb.py  dummy_ai.py  game.txt  generate-moves.py  legal_moves.hpp  legal_moves.py  main.cpp  main.hpp  main.py  milestone.cpp  milestone.hpp  moves.cpp  moves.hpp  moves.py  moves.txt  networking_test  networking_test.cpp  notes.txt  safety.txt  string_conversion.py  test.cpp  test.hpp  test.txt  translate_moves.py  tt.cpp  tt.hpp
